Fix Alignment of Placeholder Images in Widgets

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -610,10 +610,11 @@ body.error404.incsub_wiki
   .product_list_widget
     h5
       font-size: 0.9rem
-    /* Fix Size of Placeholder Images */
+    /* Fix Size & Alignment of Placeholder Images */
     .woocommerce-placeholder
       height: auto
       max-width: 100%
+      margin: 0 auto
     img
       +media-breakpoint-down(lg)
         height: 15em !important
